# tetris-2024

./: .gitignore  CMakeLists.txt  TetrisSDLC.cbp  TetrisSDLC.depend  TetrisSDLC.layout  main.cpp
include/: config.h  easy_sdl.h  tetris.h  tetris_asset.h
src/: easy_menu.cpp  easy_sdl.cpp  game_engine.cpp  testris_asset.cpp
test/: easy_sdl_asset.cpp  easy_sdl_font.cpp  easy_sdl_init.cpp  loading_assets.cpp
